--- a/dockers/mywebsite/Dockerfile
+++ b/dockers/mywebsite/Dockerfile
@@ -1,16 +1,18 @@
-FROM python
+FROM python:3.12-bookworm
+
+RUN apt update && apt install -y postgresql postgresql-contrib
 
 WORKDIR /mywebsite
 
 # ADD ENV TO THE CONTAINER (NOT IS NECESARY BUT IS BEST)
 
-COPY conf/requirements.txt /requirements.txt
+COPY conf /conf
 COPY tools/utils.sh /utils.sh
 RUN chmod +x /utils.sh
 
 # RUN apt-get update
 
-RUN pip install -r /requirements.txt
+RUN pip install -r /conf/requirements.txt
 
 ENTRYPOINT [ "sh", "/utils.sh" ]
 CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
