Initial commit: Authentication microservice with JWT, 2FA, email verification, and RabbitMQ integration

--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -6,13 +6,11 @@
 #    By: migarci2 <migarci2@student.42malaga.com    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/08/29 16:03:17 by migarci2          #+#    #+#              #
-#    Updated: 2024/08/29 18:16:58 by migarci2         ###   ########.fr        #
+#    Updated: 2024/10/13 19:53:40 by migarci2         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-FROM python3:3.11-slim
-
-WORKDIR /service
+FROM python:3.11-bookworm
 
 COPY service /service
 
@@ -22,4 +20,6 @@ RUN apt-get update && apt-get install -y postgresql postgresql-contrib
 
 EXPOSE 5000
 
-CMD service postgresql start && python manage.py migrate && python manage.py runserver 0.0.0.0:5000
+COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+CMD ["/bin/bash", "/entrypoint.sh"]
