frontend - Add Dockerfile and lighttp config

--- a/api-gateway/config/nginx.conf
+++ b/api-gateway/config/nginx.conf
@@ -14,12 +14,12 @@ upstream chess_service {
     server chess-service-container-ip:5000;
 }
 
-upstream chat_service {
-    server chat-service-container-ip:5000;
-}
-
 upstream ai_service {
     server ai-service-container-ip:5000;
+}
+
+upstream frontend_service {
+    server frontend-service-container-ip:80;
 }
 
 # Rate Limiter Zone
@@ -35,6 +35,7 @@ server {
     ssl_prefer_server_ciphers on;
     ssl_ciphers HIGH:!aNULL:!MD5;
 
+    # API endpoints
     location /api/auth {
         limit_req zone=one burst=20;
         proxy_pass http://auth_service;
@@ -83,6 +84,14 @@ server {
     location /api/chat {
         limit_req zone=one burst=20;
         proxy_pass http://chat_service;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location / {
+        proxy_pass http://frontend_service;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
