--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Dockerfile                                         :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: migarci2 <migarci2@student.42malaga.com    +#+  +:+       +#+         #
+#    By: erivero- <erivero-@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/08/29 16:03:17 by migarci2          #+#    #+#              #
-#    Updated: 2024/10/13 19:53:40 by migarci2         ###   ########.fr        #
+#    Updated: 2024/11/09 12:46:04 by erivero-         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,7 +14,7 @@ FROM python:3.11-bookworm
 
 COPY service /service
 
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r /service/requirements.txt
 
 RUN apt-get update && apt-get install -y postgresql postgresql-contrib
 
