--- a/auth/service/requirements.txt
+++ b/auth/service/requirements.txt
@@ -6,6 +6,7 @@ charset-normalizer==3.4.0
 cryptography==43.0.3
 defusedxml==0.8.0rc2
 Django==5.1.1
+django-cors-headers==4.6.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 idna==3.10
