--- a/social/Dockerfile
+++ b/social/Dockerfile
@@ -14,7 +14,7 @@ FROM python:3.11-bookworm
 
 COPY service /service
 
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r /service/requirements.txt
 
 RUN apt-get update && apt-get install -y postgresql postgresql-contrib
 
