implementing routing system

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Dockerfile                                         :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: migarci2 <migarci2@student.42malaga.com    +#+  +:+       +#+         #
+#    By: erivero- <erivero-@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/11/05 16:11:12 by migarci2          #+#    #+#              #
-#    Updated: 2024/11/12 19:16:52 by migarci2         ###   ########.fr        #
+#    Updated: 2024/12/12 19:54:15 by erivero-         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
