--- a/frontend/lighttpd.conf
+++ b/frontend/lighttpd.conf
@@ -1,7 +1,8 @@
 server.modules = (
     "mod_access",
     "mod_alias",
-    "mod_redirect"
+    "mod_redirect",
+    "mod_rewrite" 
 )
 
 server.document-root = "/var/www/service"
@@ -15,3 +16,9 @@ accesslog.filename = "/var/log/lighttpd/access.log"
 $HTTP["url"] =~ "^/" {
     dir-listing.activate = "disabled"
 }
+
+server.error-handler-404 = "/404.html"
+# Redirige todas las rutas no resueltas a index.html
+url.rewrite-if-not-file = (
+    "^/.*" => "/index.html"
+)
