error 404 in progress

--- a/frontend/lighttpd.conf
+++ b/frontend/lighttpd.conf
@@ -11,11 +11,20 @@ server.port = 80
 index-file.names = ( "index.html" )
 
 server.errorlog = "/var/log/lighttpd/error.log"
-accesslog.filename = "/var/log/lighttpd/access.log"
+# accesslog.filename = "/var/log/lighttpd/access.log"
+
 
 $HTTP["url"] =~ "^/" {
-    dir-listing.activate = "disabled"
+    # dir-listing.activate = "disabled"
+    setenv.add-response-header = (
+        "Cache-Control" => "no-store, no-cache, must-revalidate, post-check=0, pre-check=0",
+        "Expires" => "Thu, 01 Jan 1970 00:00:00 GMT"
+    )
 }
+
+server.range-requests = "disable"
+static-file.etags = "disable"
+
 
 server.error-handler-404 = "/404.html"
 # Redirige todas las rutas no resueltas a index.html
