--- a/auth/service/requirements.txt
+++ b/auth/service/requirements.txt
@@ -12,7 +12,7 @@ djangorestframework-simplejwt==5.3.1
 idna==3.10
 oauthlib==3.2.2
 pika==1.3.2
-psycopg2==2.9.9
+psycopg2-binary==2.9.9
 pycparser==2.22
 PyJWT==2.9.0
 pyotp==2.9.0
