--- a/compose.yaml
+++ b/compose.yaml
@@ -48,19 +48,19 @@ services:
     volumes:
       - ./frontend/service:/var/www/service
 
-  social:
-    build:
-      context: social
-      dockerfile: Dockerfile
-    ports:
-      - 5051:5001
-    env_file:
-      - .env
-      - social/service/.env
-    # depends_on:
-    #   - redis
-    volumes:
-      - social-data:/var/www/service
+  #social:
+  #  build:
+  #    context: social
+  #    dockerfile: Dockerfile
+  #  ports:
+  #    - 5051:5001
+  #  env_file:
+  #    - .env
+  #    - social/service/.env
+  #  # depends_on:
+  #  #   - redis
+  #  volumes:
+  #    - social-data:/var/www/service
 
     # redis:
     #   container_name: redis_cont
@@ -72,17 +72,17 @@ services:
     #   restart: always
     #   command: redis-server
 
-    chess:
-      build:
-        context: chess
-        dockerfile: Dockerfile
-      ports:
-        - 5052:5002
-      env_file:
-        - .env
-        - chess/service/.env
-      volumes:
-        - chess-data:/var/www/service
+  #chess:
+  #  build:
+  #    context: chess
+  #    dockerfile: Dockerfile
+  #  ports:
+  #    - 5052:5002
+  #  env_file:
+  #    - .env
+  #    - chess/service/.env
+  #  volumes:
+  #    - chess-data:/var/www/service
 
 networks:
   ft_transcendence-network:
