--- a/social/service/requirements.txt
+++ b/social/service/requirements.txt
@@ -24,6 +24,7 @@ idna==3.10
 kombu==5.4.2
 oauthlib==3.2.2
 pika==1.3.2
+pillow==11.1.0
 prometheus_client==0.21.1
 prompt_toolkit==3.0.50
 psycopg2-binary==2.9.9
