--- a/consistency/Dockerfile
+++ b/consistency/Dockerfile
@@ -3,23 +3,20 @@
 #                                                         :::      ::::::::    #
 #    Dockerfile                                         :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: migarci2 <migarci2@student.42malaga.com    +#+  +:+       +#+         #
+#    By: erivero- <erivero-@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/08/29 16:03:17 by migarci2          #+#    #+#              #
-#    Updated: 2024/10/17 19:43:09 by migarci2         ###   ########.fr        #
+#    Updated: 2024/11/09 12:46:04 by erivero-         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 FROM python:3.11-bookworm
 
-
-RUN apt-get update && apt-get install -y postgresql postgresql-contrib redis-server
+RUN apt-get update && apt-get install -y ncat
 
 COPY service /service
 
 RUN pip install --no-cache-dir -r /service/requirements.txt
-
-EXPOSE 5051 6379 5672 15672
 
 COPY entrypoint.sh /entrypoint.sh
 
