--- a/compose.yaml
+++ b/compose.yaml
@@ -70,10 +70,24 @@ services:
     # depends_on:
     #   - redis
     volumes:
-      - social-data:/var/www/service
+      - social-data:/service
     depends_on:
       - auth
-
+  pong:
+      build:
+        context: pong
+        dockerfile: Dockerfile
+      ports:
+        - 5052:5052
+      env_file:
+        - .env
+        - pong/service/.env
+      # depends_on:
+      #   - redis
+      volumes:
+        - pong-data:/service
+      depends_on:
+        - auth
     # redis:
     #   container_name: redis_cont
     #   image: redis:7.4-alpine
