[social] send now returns invitation_id | [pong] views fixed

--- a/social/Dockerfile
+++ b/social/Dockerfile
@@ -12,14 +12,13 @@
 
 FROM python:3.11-bookworm
 
+COPY service /service
 
 RUN apt-get update && apt-get install -y postgresql postgresql-contrib redis-server
 
-COPY service /service
-
 RUN pip install --no-cache-dir -r /service/requirements.txt
 
-EXPOSE 5051 6379 5672 15672
+EXPOSE 5051
 
 COPY entrypoint.sh /entrypoint.sh
 
