--- a/social/service/requirements.txt
+++ b/social/service/requirements.txt
@@ -1,16 +1,23 @@
 amqp==5.3.1
 asgiref==3.8.1
+attrs==25.1.0
+autobahn==24.4.2
+Automat==24.8.1
 bcrypt==4.2.0
 billiard==4.2.1
 celery==5.4.0
 certifi==2024.8.30
 cffi==1.17.1
+channels==4.2.0
+channels_redis==4.2.1
 charset-normalizer==3.4.0
 click==8.1.8
 click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
+constantly==23.10.4
 cryptography==43.0.3
+daphne==4.1.2
 defusedxml==0.8.0rc2
 Django==5.1.1
 django-cors-headers==4.6.0
@@ -21,6 +28,8 @@ gitdb==4.0.11
 GitPython==3.1.41
 humanize==4.11.0
 idna==3.10
+incremental==24.7.2
+msgpack==1.1.0
 kombu==5.4.2
 oauthlib==3.2.2
 pika==1.3.2
@@ -28,11 +37,16 @@ pillow==11.1.0
 prometheus_client==0.21.1
 prompt_toolkit==3.0.50
 psycopg2-binary==2.9.9
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
+pyOpenSSL==25.0.0
 pycparser==2.22
 PyJWT==2.9.0
 python-dateutil==2.9.0.post0
 python3-openid==3.2.0
 pytz==2025.1
+redis==5.2.1
 requests==2.32.3
 requests-oauthlib==2.0.0
 six==1.17.0
@@ -46,3 +60,7 @@ tzdata==2025.1
 urllib3==2.2.3
 vine==5.1.0
 wcwidth==0.2.13
+service-identity==24.2.0
+setuptools==75.8.0
+txaio==23.1.1
+zope.interface==7.2
