--- a/social/service/requirements.txt
+++ b/social/service/requirements.txt
@@ -27,10 +27,11 @@ flower==2.0.1
 gitdb==4.0.11
 GitPython==3.1.41
 humanize==4.11.0
+hyperlink==21.0.0
 idna==3.10
 incremental==24.7.2
-msgpack==1.1.0
 kombu==5.4.2
+msgpack==1.1.0
 oauthlib==3.2.2
 pika==1.3.2
 pillow==11.1.0
@@ -40,27 +41,26 @@ psycopg2-binary==2.9.9
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycparser==2.22
-pyOpenSSL==25.0.0
-pycparser==2.22
 PyJWT==2.9.0
+pyOpenSSL==25.0.0
 python-dateutil==2.9.0.post0
 python3-openid==3.2.0
 pytz==2025.1
 redis==5.2.1
 requests==2.32.3
 requests-oauthlib==2.0.0
+service-identity==24.2.0
 six==1.17.0
 smmap==5.0.1
 social-auth-app-django==5.4.2
 social-auth-core==4.5.4
 sqlparse==0.5.1
 tornado==6.4.2
+Twisted==24.11.0
+txaio==23.1.1
 typing_extensions==4.12.2
 tzdata==2025.1
 urllib3==2.2.3
 vine==5.1.0
 wcwidth==0.2.13
-service-identity==24.2.0
-setuptools==75.8.0
-txaio==23.1.1
 zope.interface==7.2
