--- a/pong/Dockerfile
+++ b/pong/Dockerfile
@@ -12,14 +12,18 @@
 
 FROM python:3.11-bookworm
 
+RUN apt-get update && apt-get install -y postgresql postgresql-contrib
+
 COPY service /service
 
 RUN pip install --no-cache-dir -r /service/requirements.txt
 
-RUN apt-get update && apt-get install -y postgresql postgresql-contrib
-
 EXPOSE 5052
 
 COPY entrypoint.sh /entrypoint.sh
+COPY dropdb.sh /dropdb.sh
+
 RUN chmod +x /entrypoint.sh
+RUN chmod +x /dropdb.sh
+
 CMD ["/bin/bash", "/entrypoint.sh"]
