frontend depends on auth now

--- a/compose.yaml
+++ b/compose.yaml
@@ -57,6 +57,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - "5080:80"
+    depends_on:
+      - auth
     # Se utiliza el código de la imagen; no se monta volumen para el código
 
   social:
