--- a/events/service/requirements.txt
+++ b/events/service/requirements.txt
@@ -12,6 +12,7 @@ gitdb==4.0.11
 GitPython==3.1.41
 kombu==5.4.2
 prompt_toolkit==3.0.50
+psycopg2==2.9.10
 PyJWT==2.10.1
 python-dateutil==2.9.0.post0
 six==1.17.0
