--- a/pong/service/requirements.txt
+++ b/pong/service/requirements.txt
@@ -5,6 +5,7 @@ billiard==4.2.1
 celery==5.4.0
 certifi==2024.8.30
 cffi==1.17.1
+channels==4.2.0
 charset-normalizer==3.4.0
 click==8.1.8
 click-didyoumean==0.3.1
