--- a/social/Dockerfile
+++ b/social/Dockerfile
@@ -12,8 +12,7 @@
 
 FROM python:3.11-bookworm
 
-RUN apt-get update && apt-get install -y postgresql postgresql-contrib redis-server redis
-
+RUN apt-get update && apt-get install -y postgresql postgresql-contrib
 COPY service /service
 
 RUN pip install --no-cache-dir -r /service/requirements.txt
