--- a/notifications/service/requirements.txt
+++ b/notifications/service/requirements.txt
@@ -7,6 +7,7 @@ billiard==4.2.1
 celery==5.4.0
 cffi==1.17.1
 channels==4.2.0
+channels_redis==4.2.1
 click==8.1.8
 click-didyoumean==0.3.1
 click-plugins==1.1.1
@@ -15,6 +16,7 @@ constantly==23.10.4
 cryptography==44.0.1
 daphne==4.1.2
 Django==5.1.6
+django-cors-headers==4.7.0
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.4.0
 gitdb==4.0.11
@@ -23,6 +25,8 @@ hyperlink==21.0.0
 idna==3.10
 incremental==24.7.2
 kombu==5.4.2
+msgpack==1.1.0
+pika==1.3.2
 prompt_toolkit==3.0.50
 psycopg2==2.9.10
 pyasn1==0.6.1
@@ -31,6 +35,7 @@ pycparser==2.22
 PyJWT==2.10.1
 pyOpenSSL==25.0.0
 python-dateutil==2.9.0.post0
+redis==5.2.1
 rest-framework-simplejwt==0.0.2
 service-identity==24.2.0
 six==1.17.0
@@ -43,4 +48,3 @@ tzdata==2025.1
 vine==5.1.0
 wcwidth==0.2.13
 zope.interface==7.2
-django-cors-headers==4.6.0
