--- a/frontend/.devcontainer/devcontainer.json
+++ b/frontend/.devcontainer/devcontainer.json
@@ -3,5 +3,12 @@
 	"image": "alpine:latest",
 	"runArgs": ["--init"],
 	"postCreateCommand": "apk update && apk add lighttpd && mkdir -p /var/www/ && ln -s $(pwd)/service /var/www/service && cp ./lighttpd.conf /etc/lighttpd/lighttpd.conf && sh entrypoint.sh",
-	"forwardPorts": [80]
+	"forwardPorts": [
+		80
+	],
+	"portsAttributes": {
+		"80": {
+			"label": "frontend"
+		}
+	}
 }
