testing chess volumes

--- a/chess/Dockerfile
+++ b/chess/Dockerfile
@@ -12,7 +12,7 @@
 
 FROM python:3.11-bookworm
 
-COPY service /service
+COPY service/requirements.txt /service/requirements.txt
 
 RUN pip install --no-cache-dir -r /service/requirements.txt
 
