big upgrade on chat management, is way more efficient now

--- a/compose.yaml
+++ b/compose.yaml
@@ -57,6 +57,7 @@ services:
       - .env
       - social/service/.env
     volumes:
+      # - ./social/service:/service
       - social-data:/var/lib/postgresql/data
     depends_on:
       - auth
