auth with alpine

--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -3,20 +3,21 @@
 #                                                         :::      ::::::::    #
 #    Dockerfile                                         :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: erivero- <erivero-@student.42.fr>          +#+  +:+       +#+         #
+#    By: jariza-o <jariza-o@student.42malaga.com    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/08/29 16:03:17 by migarci2          #+#    #+#              #
-#    Updated: 2025/03/20 14:46:43 by erivero-         ###   ########.fr        #
+#    Updated: 2025/03/23 18:20:52 by jariza-o         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-FROM python:3.11-bookworm
+FROM postgres:16.8-alpine3.21
 
-RUN apt-get update && apt-get install -y postgresql postgresql-contrib sudo
+RUN apk update && \
+    apk add --no-cache python3 py3-pip sudo openrc
 
 COPY service /service
 
-RUN pip install --no-cache-dir -r /service/requirements.txt
+RUN pip install --no-cache-dir --break-system-packages -r /service/requirements.txt
 
 EXPOSE 5050
 
@@ -26,4 +27,5 @@ COPY dropdb.sh /dropdb.sh
 RUN chmod +x /entrypoint.sh
 RUN chmod +x /dropdb.sh
 
-CMD ["/bin/bash", "/entrypoint.sh"]
+CMD ["/bin/sh", "/entrypoint.sh"]
+
