--- a/auth/.devcontainer/devcontainer.json
+++ b/auth/.devcontainer/devcontainer.json
@@ -1,8 +1,5 @@
-// For format details, see https://aka.ms/devcontainer.json. For config options, see the
-// README at: https://github.com/devcontainers/templates/tree/main/src/python
 {
-	"name": "Python 3",
-	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
+	"name": "auth",
 	"image": "mcr.microsoft.com/devcontainers/python:1-3.11-bookworm",
 	"features": {
 		"ghcr.io/itsmechlark/features/postgresql:1": {}
@@ -17,7 +14,8 @@
 	"runArgs": [
     "--env-file", "service/.env",
 	"--env-file", "../.env",
-	"--network=dev_network"
+	"--network=dev_network",
+	"--name=auth"
   	],
 	
 
