--- a/chess/.devcontainer/devcontainer.json
+++ b/chess/.devcontainer/devcontainer.json
@@ -1,23 +1,16 @@
-// For format details, see https://aka.ms/devcontainer.json. For config options, see the
-// README at: https://github.com/devcontainers/templates/tree/main/src/python
 {
-	"name": "Python 3",
-	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
+	"name": "chess",
 	"image": "mcr.microsoft.com/devcontainers/python:1-3.11-bookworm",
 	"features": {
 		"ghcr.io/itsmechlark/features/postgresql:1": {}
 	},
-
-	// Features to add to the dev container. More info: https://containers.dev/features.
-	// "features": {},
-
-	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	"forwardPorts": [5053],
 
 	"runArgs": [
     "--env-file", "service/.env",
 	"--env-file", "../.env",
-	"--network=dev_network"
+	"--network=dev_network",
+	"--name=chess"
   	],
 	
 
