--- a/social/.devcontainer/devcontainer.json
+++ b/social/.devcontainer/devcontainer.json
@@ -1,27 +1,21 @@
-// For format details, see https://aka.ms/devcontainer.json. For config options, see the
-// README at: https://github.com/devcontainers/templates/tree/main/src/python
 {
-    "name": "Python 3",
-    // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
+    "name": "social",
     "image": "mcr.microsoft.com/devcontainers/python:1-3.11-bookworm",
     "features": {
-        "ghcr.io/itsmechlark/features/postgresql:1": {}
+      "ghcr.io/itsmechlark/features/postgresql:1": {}
     },
-    // Features to add to the dev container. More info: https://containers.dev/features.
-    // "features": {},
-    // Use 'forwardPorts' to make a list of ports inside the container available locally.
     "forwardPorts": [
-        5051
+      5051
     ],
     "runArgs": [
-        "--env-file", "service/.env",
-        "--env-file", "../.env",
-        "--network=dev_network"
+      "--env-file", "service/.env",
+      "--env-file", "../.env",
+      "--network=dev_network",
+      "--name=social"
     ],
-    // Use 'postCreateCommand' to run commands after the container is created.
+    // Make sure container with this name doesn't already exist
+    "initializeCommand": "docker rm -f social || true",
     "postCreateCommand": "pip3 install --user -r service/requirements.txt && bash entrypoint.sh",
-    // Configure tool-specific properties.
-    // "customizations": {},
-    // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
     "remoteUser": "root"
-}
+  }
+  
