--- a/gateway/config/nginx.conf
+++ b/gateway/config/nginx.conf
@@ -42,7 +42,17 @@ http {
 
     # Server for API gateway (5090)
     server {
-        listen 5090;
+        listen 5090 ssl;
+
+        ssl_certificate /etc/nginx/selfsigned.crt;
+        ssl_certificate_key /etc/nginx/selfsigned.key;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_prefer_server_ciphers on;
+        ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384';
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 10m;
+        proxy_cookie_domain $server_name $host;
+        proxy_cookie_path / "/; SameSite=None; Secure";
 
         # Auth service
         location /api/auth/ {
